cargo-features = ["edition2024", "codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[package]
name = "loxrs"
version = "0.1.0"
authors = ["Jonathan Lopez <jonathanglopez@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
reedline = "0.37.0"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
insta = "1.41.1"
nextest = "0.1.0"
