cargo-features = ["codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"

# [profile.dev.package]
# insta.opt-level = 3
# similar.opt-level = 3

[package]
name = "loxrs"
version = "0.1.0"
authors = ["Jonathan Lopez <jonathanglopez@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
reedline = "0.38.0"

[lints.clippy]
pedantic = "warn"
style = "warn"

[dev-dependencies]
# insta = "1.41.1"
cargo-nextest = "0.9.85"
